--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/jasonsbarr/jsvm32#readme",
   "devDependencies": {
+    "jest": "^27.5.1",
     "prettier": "^2.6.2"
   }
 }
